Various things. Mainly CSS designing.

--- a/app/views/work_orders/_on_hold_wo_tab.html.erb
+++ b/app/views/work_orders/_on_hold_wo_tab.html.erb
@@ -3,7 +3,6 @@
     <th><%= "WO #" %></th>
     <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
-    <th><%= "Description" %></th>
     <th><%= "Priority" %></th>
     <th><%= "Created at" %></th>
     <th><%= "Created by" %></th>
@@ -17,12 +16,11 @@
   <tr class="priority_main_<%= on_hold.priority_list.id %>">
     <td><%= link_to(on_hold.id, on_hold) %></td>
     <td><%= link_to(on_hold.user.name, user_path(on_hold.user_id)) %></td>
-    <td><%=h on_hold.subject %></td>
-    <td><%=h on_hold.description %></td>
-    <td><%=h on_hold.priority_list.name %></td>
-    <td><%=h l on_hold.created_at, :format => :medium %></td>
-    <td><%=h on_hold.created_by %></td>
-    <td><%=h l on_hold.updated_at, :format => :medium %></td>
+    <td><%= truncate(on_hold.subject , :length => 75) %></td>
+    <td><%= on_hold.priority_list.name %></td>
+    <td><%= l on_hold.created_at, :format => :medium %></td>
+    <td><%= on_hold.created_by %></td>
+    <td><%= l on_hold.updated_at, :format => :medium %></td>
     <td><%= on_hold.assigned_to_username %></td>
     <td align="center"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(on_hold.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(on_hold.id)) %>&nbsp;
