--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,15 +1,24 @@
 <!-- mytodo adjust layout the same as users-->
-<div id="top_float_left">
-  <h1><%= t "global.quick_links" %></h1>
-<% if can? :destroy, @supplier %>
-<%= link_to(image_tag("trash.png", :title=> (t "global.delete"),:align => "bottom", :hspace => "2"), :confirm => 'Are you sure?',  :action => :destroy )%><%= link_to (t "global.delete"), @supplier, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
-<% end %>
-<% if can? :edit, @supplier %>
-<%= link_to(image_tag("edit.png", :title=> (t "global.edit"),:align => "bottom", :hspace => "2"), edit_supplier_path)%><%= link_to (t "global.edit"), edit_supplier_path %>&nbsp;&nbsp;
-<% end %>
-  <%= link_to(image_tag("exit.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), suppliers_path)%><%= link_to (t "global.close"), suppliers_path %>
+<div id="sidebar_left">
+  <%= module_header %>
+  <div class="module">
+    <ul>
+      <li class="delete">
+        <% if can? :destroy, @supplier %>
+            <%= link_to (t "global.delete"), @supplier, :confirm => 'Are you sure?', :method => :delete %>
+        <% end %>
+      </li>
+      <li class="edit">
+        <% if can? :edit, @supplier %>
+            <%= link_to (t "global.edit"), edit_supplier_path %>
+        <% end %>
+      </li>
+      <li class="exit"><%= link_to (t "global.exit"), suppliers_path %></li>
+    </ul>
+  </div>
 </div>
-<div id="show_view">
+<div id="center_col">
+  <div class="content">
 <table width="100%">
   <tr>
     <td colspan="2" align="right">
@@ -172,4 +181,5 @@
 </table>
     <br>
   </fieldset>
+    </div>
     </div>
