--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -82,7 +82,7 @@ h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
 
 /*SimpleForm Styles*/
 input.title {font-size:1.5em;}
-.simple_form {margin-bottom:0;line-height:2.5em;}
+.simple_form {margin-bottom:0;}
     .simple_form div.input, div.textarea, div.textile {font-size:100%; margin-bottom: 5px;width:100%;clear:left; display:inline-block;}
     .simple_form label {float:left;text-align:right; margin: 0 10px 0 10px;display:block;width:auto;min-width:25%;vertical-align:top;}
     .simple_form input[type='submit'] {text-transform:capitalize;display:inline;}
@@ -91,7 +91,7 @@ input.title {font-size:1.5em;}
     .simple_form label.collection_radio {margin-right: 10px;vertical-align:-2px; margin-left:2px; display:table-row;text-align:left;float:none;width:0;}
     .error_notification {padding: 4px 30px 4px 30px;background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
     .simple_form .error {clear:left;color: #ff3333;display:block;margin-left:33%;font-size:10px;padding-left:20px;font-style:italic;font-weight:bold;text-transform:capitalize;}
-    .simple_form .hint {clear: left;margin-left: 27%;padding-left:20px;color: #555;display: block;font-style: italic;}
+    .simple_form .hint {font-size:0.8em;clear: left;margin-left: 27%;padding-left:20px;color: #555;display: block;font-style: italic;}
     input.radio { vertical-align: -3px; }
     input.check_boxes { margin-left: 3px; vertical-align: -3px;}
     label.collection_check_boxes { margin:2px 0; vertical-align: -2px;}
