--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -26,21 +26,22 @@
               <% if params[:client_id].present?  %>
               <%= f.input :user_id, :as => :hidden, :input_html => { :value => params[:client_id] } %>
               <% else %>
-                  <div >
+                  <div style="margin-bottom:5px" >
                     <label>* <%= t "global.client" %></label>
-              <%= f.collection_select(:user_id, User.where("client = ?",true),:id, :name, :include_blank => true)%>
+              <%= f.collection_select(:user_id, User.where("client = ?",true).order('client'),:id, :name, :include_blank => true)%>
+                    <%= f.input :user_name, :url => user_name_users_path, :as => :autocomplete %>
                   </div>
 
                   <% end %>
           <% end %>
           <%= f.input :subject, :label => (t "workorder.subject"), :input_html => { :size => 60 } %>
           <%= f.association :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
-          <%= f.input :description, :label => (t "workorder.details") %>
+          <%= f.input :description, :label => (t "workorder.details"), :input_html => { :cols => 60, :rows => 12 } %>
           <%= f.input :edited_by, :as => :hidden, :input_html => { :value => current_user.username } %>
           <%= f.input :created_by, :as => :hidden, :input_html => { :value => current_user.username } %>
           <%= f.input :updated_at, :as => :hidden, :input_html => { :value => Time.now } %>
 
-          <div class="clear"></div>
+
           <div class="center">
             <%= f.submit %>
           </div>
