--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,7 +2,7 @@
  <%= render 'layouts/left_sidebar_modules' %>
   <ul>
     <li class="exit">
-      <%= link_to([t "global.close"], products_path) %>
+      <%= link_to([t "global.exit"], products_path) %>
     </li>
   </ul>
 </div>
