--- a/app/views/work_orders/_new_wo_tab.html.erb
+++ b/app/views/work_orders/_new_wo_tab.html.erb
@@ -1,22 +1,22 @@
 <table width="100%" cellspacing="0">
   <tr>
-    <th><%= "WO #" %></th>
-    <th><%= "Priority" %></th>
-    <th><%= "Client" %></th>
-    <th><%= "Subject" %></th>
-    <th><%= "Created" %></th>
-    <th><%= "Updated" %></th>
-    <th><%= "Actions" %></th>
+    <th><%= t "workorder.index.t_wo" %></th>
+    <th><%= t "workorder.priority" %></th>
+    <th><%= t "global.client" %></th>
+    <th><%= t "global.subject" %></th>
+    <th><%= t "global.created_at" %></th>
+    <th><%= t "global.updated_at" %></th>
+    <th><%= t "global.actions" %></th>
   </tr>
 
 <% @new_work_orders.each do |new_wo| %>
-  <tr align="left" valign="top" class="priority_main_<%= new_wo.priority_list.id %>">
+    <tr align="left" valign="top" class="priority_main_<%= new_wo.priority_list.id %>">
     <td align="center"><%= link_to(new_wo.id, new_wo) %></td>
     <td align="center"><%= new_wo.priority_list.name %></td>
     <td align="center"><%= link_to(new_wo.user.name, user_path(new_wo.user.id) )%></td>
     <td><%= truncate(new_wo.subject, :length => 75) %></td>
     <td><%= l new_wo.created_at, :format => :medium %> by <%=h new_wo.created_by %></td>
-    <td><%= l new_wo.updated_at, :format => :medium %> by <%=h new_wo.created_by %></td>
+    <td><%= l new_wo.updated_at, :format => :medium %> by <%=h new_wo.edited_by %></td>
 
     <td width="120" align="center"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>&nbsp;
